<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentTitle"
        android:text="@string/daily_duels"
        android:textColor="@android:color/black"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:contentDescription="Rzucanie wyzwania" />

    <View android:background="#000000"
        android:layout_width = "match_parent"
        android:layout_height="2dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameTipFragment"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_remainedDuels"
        android:text="@string/remained_duels"
        tools:text="Pozostało pojedynków: 3/3"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_thrownChallenges"
        android:text="@string/thrownChallenges"
        android:textAlignment="textEnd"
        tools:text="Rzuconych wyzwań: 0/10"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/newChallenge"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textStyle="normal|bold"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_agressive"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />



        <TextView
            android:text="VS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="0.3"
            tools:text="VS"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="normal|bold"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_insulted"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>

    <Button
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_confirmChallenge"
        android:layout_marginTop="32dp" />


</LinearLayout>