<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.nowakprojects.socialmafia.mainmenuoptions.newgame.SelectPlayerRolesActivity"
    tools:showIn="@layout/activity_select_player_roles"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_player_roles_choosed_functions"
        android:id="@+id/explainChoosingRolesScreen"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/town"
            android:id="@+id/townTextView"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectTownRolesRecyclerView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mafia"
                android:id="@+id/mafiaTextView"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectMafiaRolesRecyclerView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/syndicate"
                android:id="@+id/syndicateTextView"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectSyndicateRolesRecyclerView"/>

        </LinearLayout>

    </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/armshop" />

    </LinearLayout>



