<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.nowakprojects.socialmafia.ui.newgame.PickPlayersAmountActivity"
        tools:showIn="@layout/activity_pick_players_amount"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/pick_players_amount_explanation"
        android:id="@+id/pickPlayersAmountExplanation"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/abc_text_size_medium_material"
        android:textStyle="normal|bold" />
    <NumberPicker
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/playersamountpicker"
        android:descendantFocusability="blocksDescendants"/>

    <TextView
        android:layout_marginTop="46dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/pick_day_time_explanation"
        android:id="@+id/pickDayTimeExplanationTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/abc_text_size_medium_material"
        android:textStyle="normal|bold" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/daytimeSeekBar" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/timeofdaytime"
            android:id="@+id/pickedDayTimeTextView"
            android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginTop="46dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_players_names"
        android:id="@+id/goToPlayerNamesButton"
        android:layout_gravity="bottom" />

    </LinearLayout>
</ScrollView>

