<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/material_ic_information"
            android:id="@+id/imageView3"
            android:layout_weight="0.2"
            android:scaleType="fitStart" />

        <TextView
            android:text="Podpowiedź"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_tipTitle"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:layout_gravity="bottom"
            android:textStyle="normal|bold"
            android:cursorVisible="true"
            tools:text="@string/tip_title" />

        <Button
            android:text="ZWIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_collapseButton"
            android:layout_weight="0.1"
            android:layout_gravity="right"
            style="@android:style/Widget.DeviceDefault.Light.Button.Borderless.Small"
            tools:text="@string/collapse" />

    </LinearLayout>

    <View android:background="#000000"
        android:layout_width = "match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="58dp" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_tipContent"
        tools:text="@string/night_time_tip"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp" />

</LinearLayout>