
    <?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView android:layout_width="280dp"
android:layout_height="300dp"
xmlns:app="http://schemas.android.com/apk/res-auto"
app:cardCornerRadius="@dimen/cardview_default_radius"
android:layout_margin="@dimen/activity_vertical_margin"
xmlns:android="http://schemas.android.com/apk/res/android"
app:cardElevation="8dp">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="the name of the player"
        android:id="@+id/playerName"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="125dp"
        android:id="@+id/playerIco"
        android:src="@drawable/image_template"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questionMarks"
        android:id="@+id/roleName"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_role"
            android:id="@+id/show_hide_button"
            android:layout_weight="0.8" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/already_showed"
            android:id="@+id/wasRoleShowedCheckBox"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:clickable="false"/>

    </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>