<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:padding="8dp"
    android:layout_height="match_parent"
    android:gravity="center">


    <TextView
        android:text="Zabijanie/ Sprawdzanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dailyOutvoted"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameTipFragment"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameTipFragment"/>


    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/duelCircleSeekBar"
        android:layout_width="@dimen/seekbar_size_extra_large"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:cs_circle_style="butt"
        app:cs_circle_color = "@color/colorPrimary"
        app:cs_circle_stroke_width="48dp"
        app:cs_pointer_stroke_width="48dp"
        app:cs_progress="0"
        app:cs_negative_enabled = "false" />
    <!--mozna w java ustawic napis w srodku tego kolka!!!-->



    <View android:background="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width = "match_parent"
        android:layout_height="2dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:text="@string/dialy_voting_player_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choseRedPlayerName"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />


    </LinearLayout>
    <View
        android:layout_marginTop="8dp"

        android:layout_width = "match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:text="@string/dialy_voting_player_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choseBluePlayerName"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#4c4cff"
            android:textSize="24dp"
            android:textStyle="normal|bold" />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_confirmDailyJudgment"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        android:textAlignment="center" />



</LinearLayout>
</ScrollView>